--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "connect-mongo": "4.6.0",
     "cookie-parser": "1.4.6",
     "dotenv": "16.0.0",
-    "express": "4.17.3",
+    "esm": "^3.2.25",
+    "express": "^4.17.3",
     "express-handlebars": "6.0.5",
     "express-session": "1.17.2",
     "minimist": "1.2.6",
